<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/finding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Speak in English"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_wait_string"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="normal" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            app:lottie_rawRes="@raw/loader"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_string"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAdView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:text="@string/loading_ad"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:minHeight="150dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>